Fix some hover timeline positioning
Fixes #410, some misaligned text on the timeline hover thing. Also got
to messing around and fixed the problem where text on segments to the
far right of the screen gets cut off. And added some color to the
timesave text.

--- a/app/assets/stylesheets/colors.sass
+++ b/app/assets/stylesheets/colors.sass
@@ -89,3 +89,6 @@ $inverted-text-color: rgba(20, 20, 20, 1)
 .badge.black
   background: #fff
   color: $black
+
+.text-light-50
+  color: rgba(255, 255, 255, 0.5)
