--- a/app/assets/stylesheets/timeline.sass
+++ b/app/assets/stylesheets/timeline.sass
@@ -40,21 +40,16 @@
 .blank
   background: rgba(255, 255, 255, 0)
 
-.timeline .split .title
-  color: #fff
-  padding: .5em 0 0 .5em
+.split
+  cursor: default
 
-.timeline .split .time
-  padding: 0 0 .5em .5em
-
-.split .time
-  color: rgba(255, 255, 255, 0.5)
+.second-half
+  float: right
+  text-align: right
 
 .timeline .inspect
   .bar
     margin-bottom: .3em
-  .title, .time, .save
-    margin: 0 0 0 .5em
 
 .split .time
   display: block
